working carousel of 4 sliding 1

--- a/1-homepage.html
+++ b/1-homepage.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <title>Smile School</title>
         <link rel="stylesheet" href="styles.css">
-        <script src="scripts.js"></script>
+
 
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Coiny&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-
+        <script src="scripts.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     </head>
@@ -144,222 +144,7 @@
                 <h2>Most <span class="text-purple"><b>popular</b></span> tutorials</h2>
                 <div class="pop-vids-4 carousel slide mt-5" id="most-pop-carousel-4" data-ride="carousel" data-interval="false">
                     <div class="carousel-inner" role="listbox">
-                        <div class="carousel-item active">
-                            <!-- card 1 -->
-                            <div class="card border-0">
-                                <div class="card-hearder">
-                                    <img src="images/thumbnail_1.jpg" width="255" height="154">
-                                    <img class="play-btn" src="images/play.png" width="64" height="64">
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title mt-3"><b>Natural Smile</b></h5>
-                                    <small class="card-text">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</small>
-                                    <div class="d-flex flex-row align-items-center mt-3">
-                                        <img class="rounded-circle" src="images/profile_1.jpg" width="30" height="30">
-                                        <small class="text-purple ml-2"><b>Phillip Massey</b></small>
-                                    </div>
-                                    <div class="d-flex flex-row align-items-center justify-content-between mt-2">
-                                        <div class="d-flex justify-content-between align-items-center w-50">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_off.png" width="15" height="15">
-                                        </div>
-                                        <small class="text-purple"><b>8 min</b></small>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <!-- card 2 -->
-                            <div class="card border-0">
-                                <div class="card-hearder">
-                                    <img src="images/thumbnail_2.jpg" width="255" height="154">
-                                    <img class="play-btn" src="images/play.png" width="64" height="64">
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title mt-3"><b>Happy Smile</b></h5>
-                                    <small class="card-text">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</small>
-                                    <div class="d-flex flex-row align-items-center mt-3">
-                                        <img class="rounded-circle" src="images/profile_1.jpg" width="30" height="30">
-                                        <small class="text-purple ml-2"><b>Phillip Massey</b></small>
-                                    </div>
-                                    <div class="d-flex flex-row align-items-center justify-content-between mt-2">
-                                        <div class="d-flex justify-content-between align-items-center w-50">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_off.png" width="15" height="15">
-                                        </div>
-                                        <small class="text-purple"><b>8 min</b></small>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <!-- card 3 -->
-                            <div class="card border-0">
-                                <div class="card-hearder">
-                                    <img src="images/thumbnail_3.jpg" width="255" height="154">
-                                    <img class="play-btn" src="images/play.png" width="64" height="64">
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title mt-3"><b>Sad Smile</b></h5>
-                                    <small class="card-text">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</small>
-                                    <div class="d-flex flex-row align-items-center mt-3">
-                                        <img class="rounded-circle" src="images/profile_1.jpg" width="30" height="30">
-                                        <small class="text-purple ml-2"><b>Phillip Massey</b></small>
-                                    </div>
-                                    <div class="d-flex flex-row align-items-center justify-content-between mt-2">
-                                        <div class="d-flex justify-content-between align-items-center w-50">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_off.png" width="15" height="15">
-                                        </div>
-                                        <small class="text-purple"><b>8 min</b></small>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <!-- card 4 -->
-                            <div class="card border-0">
-                                <div class="card-hearder">
-                                    <img src="images/thumbnail_4.jpg" width="255" height="154">
-                                    <img class="play-btn" src="images/play.png" width="64" height="64">
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title mt-3"><b>Diagonal Smile</b></h5>
-                                    <small class="card-text">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</small>
-                                    <div class="d-flex flex-row align-items-center mt-3">
-                                        <img class="rounded-circle" src="images/profile_1.jpg" width="30" height="30">
-                                        <small class="text-purple ml-2"><b>Phillip Massey</b></small>
-                                    </div>
-                                    <div class="d-flex flex-row align-items-center justify-content-between mt-2">
-                                        <div class="d-flex justify-content-between align-items-center w-50">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_off.png" width="15" height="15">
-                                        </div>
-                                        <small class="text-purple"><b>8 min</b></small>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <!-- card 1 -->
-                            <div class="card border-0">
-                                <div class="card-hearder">
-                                    <img src="images/thumbnail_1.jpg" width="255" height="154">
-                                    <img class="play-btn" src="images/play.png" width="64" height="64">
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title mt-3"><b>Natural Smile</b></h5>
-                                    <small class="card-text">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</small>
-                                    <div class="d-flex flex-row align-items-center mt-3">
-                                        <img class="rounded-circle" src="images/profile_1.jpg" width="30" height="30">
-                                        <small class="text-purple ml-2"><b>Phillip Massey</b></small>
-                                    </div>
-                                    <div class="d-flex flex-row align-items-center justify-content-between mt-2">
-                                        <div class="d-flex justify-content-between align-items-center w-50">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_off.png" width="15" height="15">
-                                        </div>
-                                        <small class="text-purple"><b>8 min</b></small>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <!-- card 2 -->
-                            <div class="card border-0">
-                                <div class="card-hearder">
-                                    <img src="images/thumbnail_2.jpg" width="255" height="154">
-                                    <img class="play-btn" src="images/play.png" width="64" height="64">
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title mt-3"><b>Happy Smile</b></h5>
-                                    <small class="card-text">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</small>
-                                    <div class="d-flex flex-row align-items-center mt-3">
-                                        <img class="rounded-circle" src="images/profile_1.jpg" width="30" height="30">
-                                        <small class="text-purple ml-2"><b>Phillip Massey</b></small>
-                                    </div>
-                                    <div class="d-flex flex-row align-items-center justify-content-between mt-2">
-                                        <div class="d-flex justify-content-between align-items-center w-50">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_off.png" width="15" height="15">
-                                        </div>
-                                        <small class="text-purple"><b>8 min</b></small>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <!-- card 3 -->
-                            <div class="card border-0">
-                                <div class="card-hearder">
-                                    <img src="images/thumbnail_3.jpg" width="255" height="154">
-                                    <img class="play-btn" src="images/play.png" width="64" height="64">
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title mt-3"><b>Sad Smile</b></h5>
-                                    <small class="card-text">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</small>
-                                    <div class="d-flex flex-row align-items-center mt-3">
-                                        <img class="rounded-circle" src="images/profile_1.jpg" width="30" height="30">
-                                        <small class="text-purple ml-2"><b>Phillip Massey</b></small>
-                                    </div>
-                                    <div class="d-flex flex-row align-items-center justify-content-between mt-2">
-                                        <div class="d-flex justify-content-between align-items-center w-50">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_off.png" width="15" height="15">
-                                        </div>
-                                        <small class="text-purple"><b>8 min</b></small>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <!-- card 4 -->
-                            <div class="card border-0">
-                                <div class="card-hearder">
-                                    <img src="images/thumbnail_4.jpg" width="255" height="154">
-                                    <img class="play-btn" src="images/play.png" width="64" height="64">
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title mt-3"><b>Diagonal Smile</b></h5>
-                                    <small class="card-text">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</small>
-                                    <div class="d-flex flex-row align-items-center mt-3">
-                                        <img class="rounded-circle" src="images/profile_1.jpg" width="30" height="30">
-                                        <small class="text-purple ml-2"><b>Phillip Massey</b></small>
-                                    </div>
-                                    <div class="d-flex flex-row align-items-center justify-content-between mt-2">
-                                        <div class="d-flex justify-content-between align-items-center w-50">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_on.png" width="15" height="15">
-                                            <img src="images/star_off.png" width="15" height="15">
-                                        </div>
-                                        <small class="text-purple"><b>8 min</b></small>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <div class="loader my-5"></div>
                     </div>
                     <a class="carousel-control-prev ml-n5 justify-content-start" href="#most-pop-carousel-4" role="button" data-slide="prev">
                         <img class="h-25" src="images/arrow_black_left.png" alt="carousel left">
