courses pop from api, need to run on form submit

--- a/homepage.html
+++ b/homepage.html
@@ -4,18 +4,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" >
         <meta charset="UTF-8">
         <title>Smile School</title>
+
         <link rel="stylesheet" href="styles.css">
-
-
-        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Coiny&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Coiny&display=swap">
 
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="scripts.js"></script>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
     </head>
     <body>
         <!-- first section -->
@@ -24,13 +22,13 @@
             <header class="d-flex flex-column flex-sm-row align-items-center justify-content-center">
                 <div class="d-flex flex-column flex-sm-row align-items-center
                 justify-content-sm-between justify-content-center mt-4">
-                    <a href="./0-homepage.html" class="logo d-flex flex-column flex-sm-row align-items-center justify-content-sm-between mt-3 mb-5 my-sm-0 ml-sm-4">
+                    <a href="./homepage.html" class="logo d-flex flex-column flex-sm-row align-items-center justify-content-sm-between mt-3 mb-5 my-sm-0 ml-sm-4">
                         <img class="mb-3 mb-sm-0" src="images/smile_off.png" alt="Cocky Smile" width="37px" height="30px">
                         <img src="images/logo.png" alt="Smile School" width="112px" height="30px">
                     </a>
                     <nav class="collapse d-sm-flex flex-column flex-sm-row justify-content-between mr-sm-4" id="nav-links">
-                        <a href="./0-courses.html" class="nav-link text-center text-white m-0 p-0">COURSES</a>
-                        <a href="./0-pricing.html" class="nav-link text-center text-white m-0 p-0">PRICING</a>
+                        <a href="./courses.html" class="nav-link text-center text-white m-0 p-0">COURSES</a>
+                        <a href="./pricing.html" class="nav-link text-center text-white m-0 p-0">PRICING</a>
                         <a href="#login" class="nav-link text-center text-white  m-0 p-0">LOGIN</a>
                     </nav>
                     <!-- Hamburger Menu -->
